readme and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,6 @@
-pandas==1.0.5
+tqdm==4.45.0
+argparse==1.1
+pandas==1.1.5
 numpy==1.18.5
-nltk==3.5
-plotly==4.12.0
-scikit-learn==0.23.1
-matplotlib==3.3.2
-seaborn==0.10.1
-BeautifulSoup4==4.9.1
-wordcloud
-jupyterlab==2.1.5
-gensim==3.8.3
-ipywidgets>=7.5
-gdown==3.12.2
-tensorflow==2.3.1
-gym[atari]==0.17.3
-gym[box2d]==0.17.3
-optuna==2.3.0
+sentencepiece==0.1.91
+transformers==3.5.1
